force-app/main/default/objects/Account/fields/Average_Success_Story_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Success_Story_Rating__c</fullName>
    <formula>combined_success_score__c /Num_success_stories__c</formula>
    <label>Average Success Story Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>