force-app/main/default/objects/Account/fields/AVG_Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVG_Opportunity_Amount__c</fullName>
    <formula>SUM_Amount_of_Opportunities__c / Count_Opportunities_Related__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(AVG) of Opportunity Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>