force-app/main/default/objects/Account/fields/combined_success_score__c.field-meta.xml
<CustomField>
    <fullName>combined_success_score__c</fullName>
    <label>combined success score</label>
    <summarizedField>Customer_Success_Story__c.Rating__c</summarizedField>
    <summaryForeignKey>Customer_Success_Story__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>