force-app/main/default/objects/Account/fields/Count_Opportunities_Related__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunities_Related__c</fullName>
    <label>(Count) of Opportunities Related</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>