force-app/main/default/objects/Account/fields/Num_success_stories__c.field-meta.xml
<CustomField>
    <fullName>Num_success_stories__c</fullName>
    <label>Num success stories</label>
    <summaryForeignKey>Customer_Success_Story__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>