force-app/main/default/objects/Account/fields/SUM_Amount_of_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>SUM_Amount_of_Opportunities__c</fullName>
    <label>(SUM) Amount of Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>