force-app/main/default/objects/Account/validationRules/Phone_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_format</fullName>
    <active>false</active>
    <errorConditionFormula>(NOT(REGEX( Phone, &quot;(\\d){10}&quot;))  &amp;&amp; NOT(REGEX( Phone, &quot;(\\d){0}&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number invalid, must be 10 digits</errorMessage>
</ValidationRule>